deploy/k8s/argocd/ingress-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ip
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "280"
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
